Fix to extra option in form, removed console.log from index.js, made form boxes background grey for better contrast

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,6 +419,10 @@ footer {
 	text-decoration: none;
 }
 
+input, textarea, select {
+	background-color: var(--shaded-gray);
+  }
+
 /* form button on hover styling */
 #contactSend:hover {
 	background-color: var(--blue-clr);
